# audio-codecs-zero-to-hero

./: .gitignore  LICENSE  README.md  pyproject.toml
playground/encodec/: inference.py  model.py  train.py
playground/fsq/: fsq.ipynb  model.py  play.ipynb  train.py
playground/rvq/: model.py  play.ipynb  rvq.ipynb  train.py
